--- a/app/src/main/res/layout/content_main_menu.xml
+++ b/app/src/main/res/layout/content_main_menu.xml
@@ -11,5 +11,9 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="svp.com.dontmissplaces.MainMenuActivity"
     tools:showIn="@layout/app_bar_main_menu">
-
+    <!--<fragment-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:id="@+id/map"-->
+        <!--android:name="com.google.android.gms.maps.SupportMapFragment" />-->
 </RelativeLayout>
