--- a/app/src/main/res/layout/app_bar_main_menu.xml
+++ b/app/src/main/res/layout/app_bar_main_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,7 +14,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/mainmenu_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
@@ -21,14 +22,57 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/activity_maps" />
+    <include layout="@layout/content_main_menu" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/track_recording_start_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" />
+        android:src="@drawable/ic_near_me_white_48dp" />
+
+    <com.bowyer.app.fabtransitionlayout.FooterLayout
+        android:id="@+id/track_recording_fabtoolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:ft_container_gravity="center"
+        app:ft_color="@color/colorPrimary">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageButton
+                android:id="@+id/track_recording_resume_pause"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_pause_white_48dp"
+                android:layout_gravity="start"
+                android:layout_alignParentStart="true"
+                />
+
+            <TextView
+                android:layout_centerInParent="true"
+                android:id="@+id/track_recording_timer_output"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textSize="@dimen/android_standard_subheading"
+                android:textColor="@color/textColorWhite"
+                android:gravity="center|center_horizontal|center_vertical"
+                android:layout_gravity="center|center_horizontal|center_vertical"/>
+
+            <ImageButton
+                android:id="@+id/track_recording_stop"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_stop_white_48dp"
+                android:layout_alignParentEnd="true"
+                />
+        </RelativeLayout>
+    </com.bowyer.app.fabtransitionlayout.FooterLayout>
 
 </android.support.design.widget.CoordinatorLayout>
