--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,11 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="fab_margin">10dp</dimen>
+
+    <dimen name="android_standard_headline">24sp</dimen>
+    <dimen name="android_standard_title">20sp</dimen>
+    <dimen name="android_standard_subheading">16sp</dimen>
+    <dimen name="android_standard_toolbar_subtitle">48dp</dimen>
+    <dimen name="android_standard_list_item">72dp</dimen>
 </resources>
