--- a/app/src/main/res/layout/content_main_menu.xml
+++ b/app/src/main/res/layout/content_main_menu.xml
@@ -4,9 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="svp.com.dontmissplaces.MainMenuActivity"
     tools:showIn="@layout/app_bar_main_menu">
+
+    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
+
     <fragment
         android:layout_width="match_parent"
         android:layout_height="match_parent"
