--- a/app/src/main/res/layout/activity_history_tracks_item_template.xml
+++ b/app/src/main/res/layout/activity_history_tracks_item_template.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="@dimen/android_standard_list_item">
-
+    android:layout_height="wrap_content">
+<!--
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/history_tracks_item_card"
         android:layout_marginBottom="1dp"
         android:layout_gravity="center"
         android:layout_width="fill_parent"
@@ -20,5 +22,28 @@
                 android:layout_height="match_parent" />
 
     </android.support.v7.widget.CardView>
+    -->
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/android_standard_list_item"
+        android:background="@drawable/list_selected"
+        android:padding="@dimen/android_standard_list_item_padding">
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_dialog_map"
+            />
+        <TextView
+            android:id="@+id/history_tracks_item_text"
+            android:layout_marginStart="56dp"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent" />
+    </RelativeLayout>
 
+    <LinearLayout
+        android:id="@+id/add_card_activity_separator"
+        android:layout_width="fill_parent"
+        android:background="@android:color/darker_gray"
+        android:layout_height="1dp"
+        android:orientation="horizontal" />
 </LinearLayout>
