fix map mylocation btn
add detect speed walking

--- a/app/src/main/res/layout/content_main_menu.xml
+++ b/app/src/main/res/layout/content_main_menu.xml
@@ -5,9 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="svp.com.dontmissplaces.MainMenuActivity"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/app_bar_main_menu">
 
-    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
+    <!---->
 
     <fragment
         android:layout_width="match_parent"
