--- a/app/src/main/res/layout/app_bar_main_menu.xml
+++ b/app/src/main/res/layout/app_bar_main_menu.xml
@@ -42,7 +42,9 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+
+            >
 
             <ImageButton
                 android:id="@+id/track_recording_resume_pause"
@@ -53,17 +55,41 @@
                 android:layout_gravity="start"
                 android:layout_alignParentStart="true"
                 />
-
-            <TextView
+            <LinearLayout
                 android:layout_centerInParent="true"
-                android:id="@+id/track_recording_timer_output"
+                android:layout_gravity="center|center_horizontal|center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent">
+            <TextView
+
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:textSize="@dimen/android_standard_subheading"
                 android:textColor="@color/textColorWhite"
-                android:gravity="center|center_horizontal|center_vertical"
+                android:gravity="center|center_horizontal|bottom"
+                android:text="0.0"
+                android:layout_gravity="left|center_horizontal|center_vertical"/>
+
+            <TextView
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:id="@+id/track_recording_timer_output"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textSize="@dimen/android_standard_title"
+                android:textColor="@color/textColorWhite"
+                android:gravity="center|center_horizontal|top"
                 android:layout_gravity="center|center_horizontal|center_vertical"/>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textSize="@dimen/android_standard_subheading"
+                android:textColor="@color/textColorWhite"
+                android:gravity="center|center_horizontal|bottom"
+                android:text="0.00"
+                android:layout_gravity="right|center_horizontal|center_vertical"/>
+            </LinearLayout>
             <ImageButton
                 android:id="@+id/track_recording_stop"
                 style="@style/Widget.AppCompat.Button.Borderless"
