--- a/app/src/main/res/layout/content_history_tracks.xml
+++ b/app/src/main/res/layout/content_history_tracks.xml
@@ -16,12 +16,22 @@
 
     </LinearLayout>
 
+    <ListView
+        android:clickable="true"
+        android:focusable="true"
+        android:id="@+id/history_tracks_view"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </ListView>
+    <!--
     <android.support.v7.widget.RecyclerView
         android:clickable="true"
         android:focusable="true"
-        android:id="@+id/history_tracks_recycler_view"
+        android:id="@+id/history_tracks_view"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-
+-->
 </RelativeLayout>
