impl repository, add sensor steps

--- a/app/src/main/res/layout/content_history_tracks.xml
+++ b/app/src/main/res/layout/content_history_tracks.xml
@@ -17,6 +17,8 @@
     </LinearLayout>
 
     <ListView
+        android:choiceMode="singleChoice"
+        android:listSelector="#666666"
         android:clickable="true"
         android:focusable="true"
         android:id="@+id/history_tracks_view"
