--- a/app/src/main/res/layout/activity_history_tracks_item_template.xml
+++ b/app/src/main/res/layout/activity_history_tracks_item_template.xml
@@ -4,6 +4,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="fill_parent"
+    android:background="@android:color/transparent"
     android:layout_height="wrap_content">
 <!--
     <android.support.v7.widget.CardView
@@ -24,9 +25,9 @@
     </android.support.v7.widget.CardView>
     -->
     <RelativeLayout
+        android:background="@android:color/transparent"
         android:layout_width="fill_parent"
         android:layout_height="@dimen/android_standard_list_item"
-        android:background="@drawable/list_selected"
         android:padding="@dimen/android_standard_list_item_padding">
         <ImageButton
             android:layout_width="wrap_content"
