--- a/app/src/main/res/layout/app_bar_main_menu.xml
+++ b/app/src/main/res/layout/app_bar_main_menu.xml
@@ -61,7 +61,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent">
             <TextView
-
+                android:id="@+id/track_recording_distance_output"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:textSize="@dimen/android_standard_subheading"
@@ -82,6 +82,7 @@
                 android:layout_gravity="center|center_horizontal|center_vertical"/>
 
             <TextView
+                android:id="@+id/track_recording_speed_output"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:textSize="@dimen/android_standard_subheading"
