--- a/app/src/main/res/layout/content_main_menu.xml
+++ b/app/src/main/res/layout/content_main_menu.xml
@@ -13,7 +13,7 @@
     <fragment
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/map"
+        android:id="@+id/google_map"
         android:name="com.google.android.gms.maps.SupportMapFragment" />
 
 </RelativeLayout>
