--- a/app/src/main/res/layout/app_bar_main_menu.xml
+++ b/app/src/main/res/layout/app_bar_main_menu.xml
@@ -23,7 +23,9 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_main_menu" />
+
     <LinearLayout
+        android:id="@+id/floating_action_layout"
         android:layout_gravity="bottom|end"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -44,8 +46,6 @@
             android:layout_margin="@dimen/fab_margin"
             android:src="@drawable/ic_near_me_white_48dp" />
     </LinearLayout>
-
-
 
     <com.bowyer.app.fabtransitionlayout.FooterLayout
         android:id="@+id/track_recording_fabtoolbar"
