--- a/app/src/main/res/layout/popup_add_new_place.xml
+++ b/app/src/main/res/layout/popup_add_new_place.xml
@@ -31,4 +31,25 @@
         android:layout_marginBottom="16dp"
         android:fontFamily="sans-serif"
         android:hint=""/>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/email_sign_in_button"
+            style="?android:textAppearanceSmall"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="OK"
+            android:textStyle="bold" />
+        <Button
+            android:id="@+id/email_sign_in_button1"
+            style="?android:textAppearanceSmall"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="OK"
+            android:textStyle="bold" />
+    </LinearLayout>
 </LinearLayout>
