--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,6 @@
     <dimen name="android_standard_list_item">72dp</dimen>
 
     <dimen name="android_standard_list_item_padding">16dp</dimen>
+    <dimen name="android_standard_actionBarSize_inverted">-56.0dp</dimen>
+
 </resources>
