--- a/app/src/main/res/layout/app_bar_main_menu.xml
+++ b/app/src/main/res/layout/app_bar_main_menu.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
+    android:id="@+id/content_main_menu_coordinator_layout"
+
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -35,9 +37,9 @@
             android:id="@+id/track_recording_show_place_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:backgroundTint="@color/cardview_light_background"
+            app:backgroundTint="@color/textColorWhite"
             android:layout_margin="@dimen/fab_margin"
-            android:src="@drawable/common_full_open_on_phone" />
+            android:src="@drawable/ic_menu_send" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/track_recording_start_fab"
@@ -46,6 +48,78 @@
             android:layout_margin="@dimen/fab_margin"
             android:src="@drawable/ic_near_me_white_48dp" />
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/select_place_scrolling_act_content_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/windowBackground"
+        android:orientation="vertical"
+        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
+        >
+        <LinearLayout
+            android:id="@+id/select_place_scrolling_header_layout"
+            android:layout_gravity="center_vertical|start"
+            android:gravity="center_vertical|start"
+            android:layout_height="@dimen/android_standard_list_item"
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:background="@color/colorPrimary"
+            android:paddingStart="16dp">
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/select_place_show_title"
+                android:textSize="@dimen/android_standard_headline"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <android.support.v7.widget.AppCompatTextView
+                android:textSize="@dimen/android_standard_subheading"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="android_standard_subheading"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_marginTop="8dp"
+            >
+            <android.support.v7.widget.AppCompatTextView
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="32dp"
+                android:layout_gravity="center_vertical|start"
+                android:gravity="center_vertical|start"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/android_standard_toolbar_subtitle"
+                android:text="Address fdxzsf fdsf . dsf"
+                />
+            <android.support.v7.widget.AppCompatTextView
+                android:layout_gravity="center_vertical|start"
+                android:gravity="center_vertical|start"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="32dp"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/android_standard_toolbar_subtitle"
+                android:text="Address 3453 fdxzsf fdsf . dsf"
+                />
+            <View
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@android:color/darker_gray"/>
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/select_place_scrolling_act_save_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+        app:backgroundTint="@color/textColorWhite"
+        android:src="@drawable/ic_menu_send"
+        app:layout_anchor="@id/select_place_show_title"
+        app:layout_anchorGravity="end" />
 
     <com.bowyer.app.fabtransitionlayout.FooterLayout
         android:id="@+id/track_recording_fabtoolbar"
