--- a/app/src/main/res/layout/app_bar_main_menu.xml
+++ b/app/src/main/res/layout/app_bar_main_menu.xml
@@ -72,6 +72,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/select_place_show_latlng"
                 android:textSize="@dimen/android_standard_subheading"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
