--- a/app/src/main/res/layout/app_bar_main_menu.xml
+++ b/app/src/main/res/layout/app_bar_main_menu.xml
@@ -24,7 +24,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main_menu" />
+    <include layout="@layout/content_main_map" />
 
     <LinearLayout
         android:id="@+id/floating_action_layout"
