--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -1,6 +1,10 @@
 <preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- These settings headers are only used on tablets. -->
+    <header
+        android:fragment="svp.com.dontmissplaces.ui.activities.SettingsActivity$MapPreferenceFragment"
+        android:icon="@drawable/ic_setting_light"
+        android:title="@string/pref_header_map" />
 
     <header
         android:fragment="svp.com.dontmissplaces.ui.activities.SettingsActivity$GeneralPreferenceFragment"
