--- a/app/src/main/res/xml/pref_settings_map.xml
+++ b/app/src/main/res/xml/pref_settings_map.xml
@@ -4,7 +4,7 @@
         android:defaultValue="0"
         android:entries="@array/pref_settings_titles_map_provider"
         android:entryValues="@array/pref_settings_values_map_provider"
-        android:key="settings_map_provider_type"
+        android:key="@string/pref_settings_title_map_provider_key"
         android:negativeButtonText="@null"
         android:positiveButtonText="@null"
         android:title="@string/pref_settings_title_map_provider" />
