--- a/app/src/main/res/layout/app_bar_main_menu.xml
+++ b/app/src/main/res/layout/app_bar_main_menu.xml
@@ -58,6 +58,35 @@
         app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
         >
         <LinearLayout
+            android:layout_gravity="fill|fill_horizontal"
+            android:gravity="fill|fill_horizontal"
+            android:layout_height="@dimen/android_standard_toolbar_subtitle"
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:background="@color/common_signin_btn_default_background">
+            <ImageButton
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_near_me_white_48dp"
+                style="?android:attr/borderlessButtonStyle" />
+            <ImageButton
+                android:layout_weight="1"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_add_location_white_48dp"
+                style="?android:attr/borderlessButtonStyle" />
+            <ImageButton
+                android:layout_weight="1"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_gps_fixed_white_48dp"
+                style="?android:attr/borderlessButtonStyle" />
+        </LinearLayout>
+        <LinearLayout
             android:id="@+id/select_place_scrolling_header_layout"
             android:layout_gravity="center_vertical|start"
             android:gravity="center_vertical|start"
