add buttom panel

--- a/app/src/main/res/layout/app_bar_main_menu.xml
+++ b/app/src/main/res/layout/app_bar_main_menu.xml
@@ -28,23 +28,21 @@
 
     <LinearLayout
         android:id="@+id/floating_action_layout"
-        android:layout_gravity="bottom|end"
+        android:layout_gravity="top|end"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/track_recording_show_place_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:backgroundTint="@color/textColorWhite"
+            app:backgroundTint="@color/colorAccent"
             android:layout_margin="@dimen/fab_margin"
              />
-
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/track_recording_start_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:backgroundTint="@color/colorAccent"
             android:layout_margin="@dimen/fab_margin"
             android:src="@drawable/ic_near_me_white_48dp" />
     </LinearLayout>
@@ -65,6 +63,7 @@
             android:orientation="horizontal"
             android:background="@color/common_signin_btn_default_background">
             <ImageButton
+                android:id="@+id/track_recording_start_btn"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -72,6 +71,15 @@
                 android:src="@drawable/ic_near_me_white_48dp"
                 style="?android:attr/borderlessButtonStyle" />
             <ImageButton
+
+                android:layout_weight="1"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitCenter"
+                android:src="@drawable/route"
+                style="?android:attr/borderlessButtonStyle" />
+            <ImageButton
+                android:id="@+id/track_recording_show_place_info_btn"
                 android:layout_weight="1"
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
