--- a/app/src/main/res/layout/app_bar_main_menu.xml
+++ b/app/src/main/res/layout/app_bar_main_menu.xml
@@ -133,11 +133,12 @@
         <LinearLayout
             android:id="@+id/select_place_content_header_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_height="match_parent"
+
             android:orientation="vertical">
 
             <android.support.v7.widget.AppCompatTextView
+                android:layout_margin="16dp"
                 android:id="@+id/select_place_show_address"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -145,14 +146,23 @@
                 android:layout_marginEnd="32dp"
                 android:gravity="center_vertical|start" />
 
-            <android.support.v7.widget.AppCompatTextView
+            <View
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/android_standard_toolbar_subtitle"
-                android:layout_gravity="center_vertical|start"
-                android:layout_marginEnd="32dp"
-                android:gravity="center_vertical|start"
-                android:text="Address 3453 fdxzsf fdsf . dsf" />
+                android:layout_height="1dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@android:color/darker_gray" />
 
+            <Button
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorAccent"
+                android:textAlignment="textStart"
+                android:textAllCaps="false"
+                android:text="Show Info from Google map"
+
+                />
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
