--- a/app/src/main/res/layout/app_bar_main_menu.xml
+++ b/app/src/main/res/layout/app_bar_main_menu.xml
@@ -101,6 +101,7 @@
                 android:src="@drawable/ic_add_location_white_48dp" />
 
             <ImageButton
+                android:id="@+id/move_to_my_location"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
@@ -144,7 +145,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|start"
                 android:layout_marginEnd="32dp"
-                android:gravity="center_vertical|start" />
+                android:gravity="center_vertical|start"
+                android:textIsSelectable="true"
+                />
 
             <View
                 android:layout_width="match_parent"
