--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,11 +4,12 @@
     <item
         android:id="@+id/main_menu_action_search"
         android:orderInCategory="100"
-        android:showAsAction="ifRoom"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_action_search"
+        app:actionViewClass="android.widget.SearchView"
         android:title="action_search"/>
     <item
         android:id="@+id/main_menu_action_settings"
-        android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
 </menu>
