--- a/app/src/main/res/layout/nav_header_main_menu.xml
+++ b/app/src/main/res/layout/nav_header_main_menu.xml
@@ -1,34 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/nav_header_height"
-    android:background="@color/colorPrimaryDark"
+    android:layout_height="wrap_content"
+
     android:gravity="bottom"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/common_signin_btn_default_background"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
+<!--android:background="@color/colorPrimaryDark"-->
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@android:drawable/sym_def_app_icon" />
-
-    <TextView
+    <!--timer -->
+    <RelativeLayout
+        android:id="@+id/track_recording_nav_header_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Android Studio"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:visibility="gone">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="android.studio@android.com" />
+        <ImageButton
+            android:id="@+id/track_recording_resume_pause"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_gravity="start"
+            android:src="@drawable/ic_pause_white_48dp" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center|center_horizontal|center_vertical">
+
+            <TextView
+                android:id="@+id/track_recording_distance_output"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="left|center_horizontal|center_vertical"
+                android:gravity="center|center_horizontal|bottom"
+                android:text="0.0"
+                android:textColor="@color/textColorWhite"
+                android:textSize="@dimen/android_standard_subheading" />
+
+            <TextView
+                android:id="@+id/track_recording_timer_output"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center|center_horizontal|center_vertical"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="15dp"
+                android:gravity="center|center_horizontal|top"
+                android:textColor="@color/textColorWhite"
+                android:textSize="@dimen/android_standard_title" />
+
+            <TextView
+                android:id="@+id/track_recording_speed_output"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="right|center_horizontal|center_vertical"
+                android:gravity="center|center_horizontal|bottom"
+                android:text="0.00"
+                android:textColor="@color/textColorWhite"
+                android:textSize="@dimen/android_standard_subheading" />
+        </LinearLayout>
+
+        <ImageButton
+            android:id="@+id/track_recording_stop"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/ic_stop_white_48dp" />
+    </RelativeLayout>
 
 </LinearLayout>
