--- a/app/src/main/res/layout/activity_history_tracks_item_template.xml
+++ b/app/src/main/res/layout/activity_history_tracks_item_template.xml
@@ -11,8 +11,9 @@
         android:layout_height="@dimen/android_standard_list_item"
         android:padding="@dimen/android_standard_list_item_padding">
         <ImageButton
+            android:id="@+id/history_tracks_item_image"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:src="@android:drawable/ic_dialog_map"
             />
         <TextView
