--- a/app/src/main/res/layout/activity_history_tracks_item_template.xml
+++ b/app/src/main/res/layout/activity_history_tracks_item_template.xml
@@ -14,6 +14,7 @@
             android:id="@+id/history_tracks_item_image"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:background="@android:color/transparent"
             android:src="@android:drawable/ic_dialog_map"
             />
         <TextView
