place view, refactor

--- a/app/src/main/res/layout/app_bar_main_menu.xml
+++ b/app/src/main/res/layout/app_bar_main_menu.xml
@@ -121,10 +121,10 @@
 
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/select_place_show_near_info"
-                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/android_standard_subheading" />
+                android:text="Bla bla"
+                android:textSize="@dimen/android_standard_body_textsize" />
 
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/select_place_show_title"
@@ -136,13 +136,13 @@
                 android:id="@+id/select_place_show_address"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/android_standard_subheading" />
+                android:textSize="@dimen/android_standard_body_textsize" />
 
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/select_place_show_placetype"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/android_standard_subheading" />
+                android:textSize="@dimen/android_standard_body_textsize" />
 
         </LinearLayout>
         <!-- action place btn -->
@@ -191,6 +191,7 @@
         android:orientation="horizontal">
 
             <ImageButton
+                android:id="@+id/select_place_move_to_location_btn"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
