--- a/app/src/main/res/layout/activity_save_track.xml
+++ b/app/src/main/res/layout/activity_save_track.xml
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
+        android:layout_margin="@dimen/zoom_fabbtn_top_margin"
         android:src="@drawable/ic_done_white_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
