--- a/app/src/main/res/layout/nav_header_main_menu.xml
+++ b/app/src/main/res/layout/nav_header_main_menu.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
+    android:minHeight="@dimen/nav_header_height"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
